--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,39 +48,33 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
+    //viewModel
     def lifecycle_version = "2.5.0-rc01"
-    // ViewModel
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
-    //for using by viewModels()
+    implementation 'androidx.fragment:fragment-ktx:1.4.1'
     implementation 'androidx.fragment:fragment-ktx:1.4.1'
 
+    //navigation
     def nav_version = "2.4.2"
-    // Kotlin
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
-    // Feature module Support
     implementation "androidx.navigation:navigation-dynamic-features-fragment:$nav_version"
 
-    def fragment_version = "1.4.1"
-    implementation "androidx.fragment:fragment-ktx:$fragment_version"
-
+    //room
     def room_version = "2.4.2"
     implementation "androidx.room:room-ktx:$room_version"
     implementation "androidx.room:room-runtime:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
 
-    // Moshi
-    implementation 'com.squareup.moshi:moshi-kotlin:1.13.0'
-
     // Retrofit with Moshi Converter
     implementation 'com.squareup.retrofit2:converter-moshi:2.9.0'
 
+    // Moshi
+    implementation 'com.squareup.moshi:moshi-kotlin:1.13.0'
+
     //glide
     implementation 'com.github.bumptech.glide:glide:4.13.0'
-
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.13.0'
 
     //koin
     def koin_version = "3.2.0"
