--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,6 +69,9 @@ dependencies {
     // Retrofit with Moshi Converter
     implementation 'com.squareup.retrofit2:converter-moshi:2.9.0'
 
+    //okhttp logger
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.2.1'
+
     // Moshi
     implementation 'com.squareup.moshi:moshi-kotlin:1.13.0'
 
